--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dev": "nodemon src/app.js "
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "validator": "^13.15.15"
   }
 }
